--- a/www/index.html
+++ b/www/index.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/roboto.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <title>relievR</title>
+  <title>COPeD</title>
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <div class="pull-left">
-        <a class="navbar-brand" href="#">relievR</a>
+        <a class="navbar-brand" href="#">COPeD</a>
       </div>
 
       <div class="navbar-text pull-right">
@@ -55,6 +55,10 @@
         </div>
       </div>
     </form>
+
+    <ul class="pager">
+      <li class="next"><a href="#">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
+    </ul>
   </div>
 
   <footer class="normal">
