--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="format-detection" content="telephone=no">
   <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/roboto.css">
   <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -85,28 +85,28 @@
             'text': 'My symptoms have improved after 48 hours.',
             'status': 'warning',
             'no': 12,
-            'yes': 5,
+            'yes': 5
         },
         {
             'id': 5,
             'text': 'I have more shortness of breath than usual.',
             'status': 'normal',
             'no': 7,
-            'yes': 6,
+            'yes': 6
         },
         {
             'id': 6,
             'text': 'I have had more shortness of breath than usual<br>for at least 2 days.',
             'status': 'warning',
             'no': 7,
-            'yes': 13,
+            'yes': 13
         },
         {
             'id':13,
             'text': 'I have started the prescribed <i>prednisone</i>.',
             'status': 'warning',
             'no': 14,
-            'yes': 15,
+            'yes': 15
         },
         {
             'id':14,
@@ -119,21 +119,21 @@
             'text': 'I am very short of breath, nervous, confused and/or<br>I have chest pain.',
             'status': 'warning',
             'no': 7,
-            'yes': 12,
+            'yes': 12
         },
         {
             'id': 7,
             'text': 'I have used my puffer more than usual.',
             'status': 'warning',
             'no': 11,
-            'yes': 8,
+            'yes': 8
         },
         {
             'id': 8,
             'text': 'I have increased my puffer usage to the prescribed maximum.',
             'status': 'warning',
             'no': 9,
-            'yes': 10,
+            'yes': 10
         },
         {
             'id': 9,
@@ -146,7 +146,7 @@
             'text': 'I am getting enough relief.',
             'status': 'warning',
             'no': 12,
-            'yes': 11,
+            'yes': 11
         },
         {
             'id': 11,
