--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <div class="pull-left">
-        <a class="navbar-brand" href="#">COPeD</a>
+        <p class="navbar-brand"><img class="logo" src="img/logo_UI_COPeD.svg"></p>
       </div>
     </div>
   </nav>
@@ -26,19 +26,19 @@
 
   <footer class="normal">
     <div class="container">
-      <p class="text-muted text-center status">NORMAL</p>
+      <p class="text-muted text-center status"><img src="img/icon_normal.svg">NORMAL</p>
     </div>
   </footer>
 
   <footer class="warning"  style="display:none;">
     <div class="container">
-      <p class="text-muted text-center status">WARNING</p>
+      <p class="text-muted text-center status"><img src="img/icon_warning.svg">WARNING</p>
     </div>
   </footer>
 
   <footer class="danger" style="display:none;">
     <div class="container">
-      <p class="text-muted text-center status">DANGER</p>
+      <p class="text-muted text-center status"><img src="img/icon_danger.svg">DANGER</p>
     </div>
   </footer>
 
