--- a/www/index.html
+++ b/www/index.html
@@ -156,7 +156,7 @@
         },
         {
             'id': 12,
-            'text': 'Go to the nearest Hospital.<br><br>A message has been sent to your emergency contact.',
+            'text': 'Seek medical attention.<br><br>A message has been sent to your emergency contact.',
             'status': 'danger',
             'htmlClass': 'well'
         }
